fix(refs T30974): move default text color to tokens
$default-font-color is now $dp-color-text-default
and defined within demosplan-ui. As it defaults
to $dp-color-neutral-dark-2, new overrides must
be applied.

--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/_settings-color-assignment.dplan.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/_settings-color-assignment.dplan.scss
@@ -24,7 +24,6 @@
 $dp-bg-color:                           $dp-color-white !default;
 
 // Globals > Font colors
-$default-font-color:                    $dp-color-neutral-dark-1 !default;
 $deactivated-font-color:                $dp-color-neutral-base !default;
 
 // Globals > Forms
@@ -58,6 +57,6 @@ $pager-color-active-bg:                 $dp-color-neutral-light-1 !default;
 
 
 // @TODO sort into above or move to token
-$h1-color:                              $default-font-color !default;
-$h2-color:                              $default-font-color !default;
-$h3-color:                              $default-font-color !default;
+$h1-color:                              $dp-color-text-default !default;
+$h2-color:                              $dp-color-text-default !default;
+$h3-color:                              $dp-color-text-default !default;
