--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_chart.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_chart.scss
@@ -57,7 +57,7 @@
         padding-left: 7px;
 
         background-color: transparent;
-        color: $default-font-color;
+        color: $dp-color-text-default;
 
         text-align: left;
     }
