--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_infolist.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_infolist.scss
@@ -59,7 +59,7 @@
     &__toggle {
         @include keyboard-focus;
 
-        color: $default-font-color;
+        color: $dp-color-text-default;
 
         &:hover {
             color: $dp-color-interactive-hover;
