--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_proceduresearch.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_proceduresearch.scss
@@ -60,7 +60,7 @@
         }
 
         &__result {
-            color: $default-font-color;
+            color: $dp-color-text-default;
             padding-top: 1em;
         }
 
