--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/objects/_badge.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/objects/_badge.scss
@@ -72,7 +72,7 @@
 
 .o-badge--light {
     background-color: $dp-color-neutral-light-3;
-    color: $default-font-color;
+    color: $dp-color-text-default;
 }
 
 .o-badge--dark {
