fix(refs T30974): move muted text color to tokens
$deactivated-font-color is now $dp-color-text-muted
and defined within demosplan-ui.

--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/objects/_box.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/objects/_box.scss
@@ -46,7 +46,7 @@ $box-hellip-height: $box-hellip-lines * $box-hellip-line-height;
         &.closed {
 
             background: $dp-color-neutral-light-3; // check if the color fits
-            color: $deactivated-font-color !important;
+            color: $dp-color-text-muted !important;
         }
     }
 
