Feat(refs:T31920): Change style header and footer
- in header all titles get font-size 16px
- the projectname get weight-bold
- an arrow icon is besides project-participation
- in the footer terms of use get removed

--- a/templates/bundles/DemosPlanCoreBundle/DemosPlanCore/includes/base_footer.html.twig
+++ b/templates/bundles/DemosPlanCoreBundle/DemosPlanCore/includes/base_footer.html.twig
@@ -47,12 +47,14 @@
                 </a>
             {% endif %}
 
+            {% block termsofuse %}
             {% if hasPermission('area_terms_of_use') %}
             <a class="c-footer__link" href="{{ path( 'DemosPlan_misccontent_static_terms') }}"
                aria-label="{{ 'terms.of.use'|trans }}">
                 {{- "terms.of.use"|trans -}}
             </a>
             {% endif %}
+            {% endblock termsofuse %}
 
             {% if hasPermission('area_main_contact') %}
                 <a class="c-footer__link" href="{{ path( 'DemosPlan_misccontent_static_contact') }}"
