--- a/templates/bundles/DemosPlanCoreBundle/DemosPlanStatic/imprint.html.twig
+++ b/templates/bundles/DemosPlanCoreBundle/DemosPlanStatic/imprint.html.twig
@@ -11,6 +11,7 @@
 
             {% if templateVars.customerImprint is not null %}
                 <div class="{{ 'c-styled-html u-mt-0_25'|prefixClass }}">
+                    {{ templateVars.customerImprint|wysiwyg(['h2', 'h3', 'h4']) }}
                 </div>
             {% endif %}
 
