--- a/templates/bundles/DemosPlanCoreBundle/DemosPlanNews/globalnewslist_list_index.html.twig
+++ b/templates/bundles/DemosPlanCoreBundle/DemosPlanNews/globalnewslist_list_index.html.twig
@@ -6,7 +6,10 @@
     }%}
 
         {% block content %}
-            <div class="layout__item u-1-of-1-palm{% if templateVars.pressList is not empty %} u-1-of-2-lap-up{% endif %} u-pl-0_5 u-pl-0-lap-up u-pr-lap-up">
+            <div class="layout__item u-1-of-1-palm  u-pl-0_5 u-pl-0-lap-up u-pr-lap-up
+                {% if templateVars.pressList is not empty %}
+                    u-1-of-2-lap-up
+                {% endif %}">
                 <h2>
                     {{ "news.announcements"|trans }}
                 </h2>
